feat: slicing about page

--- a/src/content/about/personal.mdx
+++ b/src/content/about/personal.mdx
@@ -14,4 +14,8 @@ let hobbies = [
   "Gaming",
   // 'Sleeping'
 ];
+
+// Social Media
+let github = "https://github.com/lazlanrafar";
+let linkedin = "https://www.linkedin.com/in/lazlanrafar/";
 ```
