feat(projects): update atleast the projects list is working

--- a/src/content/about/personal.mdx
+++ b/src/content/about/personal.mdx
@@ -4,18 +4,23 @@ summary: "Hii I'm a Full Stack Web Developer based in Indonesia. I describe myse
 ---
 
 ```ts
-const NAME = "L Azlan Rafar";
+/**
+ * About Me
+ *
+ * Hii, I'm a Software Developer Based in Indonesia.
+ * I describe myself as a passionate developer who loves coding, open-source, and the web platform ❤️
+ *
+ */
 
-let location = "Indonesia";
-
-let hobbies = [
-  "Programming",
-  "Eating",
-  "Gaming",
-  // 'Sleeping'
-];
-
-// Social Media
-let github = "https://github.com/lazlanrafar";
-let linkedin = "https://www.linkedin.com/in/lazlanrafar/";
+const PERSONAL = {
+  name: "L Azlan Rafar",
+  title: "Full Stack Developer | Mobile App",
+  country: "Indonesia",
+  hobbies: [
+    "Programming",
+    "Eating",
+    "Gaming",
+    // 'Sleeping'
+  ],
+};
 ```
