--- a/src/content/about/skills.mdx
+++ b/src/content/about/skills.mdx
@@ -1,12 +1,16 @@
 ---
-title: "tech-stack.ts"
+title: "skills.ts"
 summary: "Hii I'm a Full Stack Web Developer based in Indonesia. I describe myself as a passionate developer who loves coding, open source, and the web platform."
 ---
 
 ```ts
-// Skills Information
+/**
+ * Skills & Tools
+ *
+ * @description A list of my skills and tools that I use on a daily basis.
+ * @see
+ */
 
-// Most important skills
 let languages = ["CSS", "HTML", "JavaScript", "TypeScript", "PHP", "Go"];
 
 let frameworks = {
