fix(icons): using local icon

--- a/src/content/about/personal.mdx
+++ b/src/content/about/personal.mdx
@@ -7,14 +7,14 @@ summary: "Hii I'm a Full Stack Web Developer based in Indonesia. I describe myse
 /**
  * About Me
  *
- * Hii, I'm a Software Developer Based in Indonesia.
- * I describe myself as a passionate developer who loves coding, open-source, and the web platform ❤️
- *
+ * Hey there! I'm a Software Developer based in Indonesia.
+ * I describe myself as a passionate creator who thrives on coding, contributing to open-source projects, and diving deep into the web platform ❤️.
+ * Whether it's crafting beautiful UIs, building scalable back-ends, or developing mobile apps, I love turning ideas into reality.
  */
 
 const PERSONAL = {
-  name: "L Azlan Rafar",
-  title: "Full Stack Developer | Mobile App",
+  name: "L. Azlan Rafar",
+  title: ["Software Developer", "Front-end & Back-end Developer", "Mobile App Developer", "Cloud Engineer"],
   country: "Indonesia",
   hobbies: [
     "Programming",
