--- a/src/content/about/skills.mdx
+++ b/src/content/about/skills.mdx
@@ -7,26 +7,26 @@ summary: "Hii I'm a Full Stack Web Developer based in Indonesia. I describe myse
 /**
  * Skills & Tools
  *
- * @description A list of my skills and tools that I use on a daily basis.
- * @see
+ * @description A categorized list of the skills and tools I use regularly.
  */
 
-let languages = ["CSS", "HTML", "JavaScript", "TypeScript", "PHP", "Go"];
+const languages = ["CSS", "HTML", "JavaScript", "TypeScript", "PHP", "Go"];
 
-let frameworks = {
-  website: ["React", "Next.js", "Vue", "Laravel"],
+const frameworks = {
+  web: ["React", "Next.js", "Vue", "Laravel"],
   backend: ["Express", "Laravel", "Gin"],
   mobile: ["React Native", "Flutter"],
 };
 
-let databases = ["MySQL", "MongoDB", "PostgreSQL"];
+const databases = ["MySQL", "MongoDB", "PostgreSQL"];
 
-let tools = ["Git", "Docker", "Kubernetes"];
+const tools = ["Git", "Docker", "Kubernetes", "Amazon S3", "Amplify", "ngrok"];
 
-// Other skills
-let otherSkills = {
-  languages: ["Python", "Java", "C++"],
-  databases: ["Redis", "SQLite"],
-  tools: ["Linux", "Nginx", "Apache"],
+/** Additional Skills */
+const additionalSkills = {
+  programmingLanguages: ["Python", "Java", "C++"],
+  extraDatabases: ["Redis", "SQLite"],
+  cloudServices: ["Amazon S3", "Amplify"],
+  otherTools: ["Linux", "Nginx", "Apache", "ngrok"],
 };
 ```
