refactor mdx render and homepage design

--- a/src/markdown/personal.mdx
+++ b/src/markdown/personal.mdx
@@ -1,8 +1,3 @@
----
-title: "personal.ts"
-summary: "Hii I'm a Full Stack Web Developer based in Indonesia. I describe myself as a passionate developer who loves coding, open source, and the web platform."
----
-
 ```ts
 /**
  * About Me
@@ -14,7 +9,12 @@ summary: "Hii I'm a Full Stack Web Developer based in Indonesia. I describe myse
 
 const PERSONAL = {
   name: "L. Azlan Rafar",
-  title: ["Software Developer", "Front-end & Back-end Developer", "Mobile App Developer", "Cloud Engineer"],
+  title: [
+    "Software Developer",
+    "Front-end & Back-end Developer",
+    "Mobile App Developer",
+    "Cloud Engineer",
+  ],
   country: "Indonesia",
   hobbies: [
     "Programming",
