feat(app): fix tailwindcss

--- a/markdown/personal.mdx
+++ b/markdown/personal.mdx
@@ -1,26 +1,36 @@
 ```ts
 /**
- * About Me
+ * 🌏 About Me
  *
- * Hey there! I'm a Software Developer based in Indonesia.
- * I describe myself as a passionate creator who thrives on coding, contributing to open-source projects, and diving deep into the web platform ❤️.
- * Whether it's crafting beautiful UIs, building scalable back-ends, or developing mobile apps, I love turning ideas into reality.
+ * @description A walking merge conflict turned software engineer.
  */
 
 const PERSONAL = {
   name: "L. Azlan Rafar",
   title: [
-    "Software Developer",
-    "Front-end & Back-end Developer",
-    "Mobile App Developer",
-    "Cloud Engineer",
+    "Full-stack Developer (with front-end bias)",
+    "Bug Squasher Extraordinaire",
+    "Cloud Tinkerer",
+    "Mobile App Crafter",
+    "Certified Late-night Debugger",
   ],
-  country: "Indonesia",
+  location: "Bali, Indonesia 🇮🇩 (Yes, I code with a beach view)",
+  summary: `
+    A passionate full-stack dev who has wrangled React, Vue, Node, and PostgreSQL into
+    submission for over 4 years. Loves building things people *actually* use and isn’t afraid
+    of production fire (as long as there's coffee). Believes CI/CD is love, Docker is life,
+    and that dark mode is a lifestyle.
+  `,
   hobbies: [
-    "Programming",
-    "Eating",
-    "Gaming",
-    // 'Sleeping'
+    "Refactoring code I wrote last week",
+    "Eating like I just deployed to production",
+    "Gaming (for 'UX research', of course)",
+    "Collecting terminal themes I'll never use",
   ],
+  socials: {
+    website: "https://www.lazlanrafar.com",
+    github: "https://github.com/lazlanrafar",
+    linkedin: "https://www.linkedin.com/in/lazlanrafar",
+  },
 };
 ```
