--- a/markdown/skills.mdx
+++ b/markdown/skills.mdx
@@ -1,27 +1,54 @@
 ```ts
 /**
- * Skills & Tools
+ * 💻 Skills & Tools (a.k.a The Dev Arsenal)
  *
- * @description A categorized list of the skills and tools I use regularly.
+ * @description A magical list of things I poke at until stuff works.
  */
 
-const languages = ["CSS", "HTML", "JavaScript", "TypeScript", "PHP", "Go"];
+const languages = [
+  "JavaScript",
+  "TypeScript",
+  "PHP",
+  "Go",
+  "Dart",
+  "SQL",
+  "HTML",
+  "CSS",
+];
 
 const frameworks = {
-  web: ["React", "Next.js", "Vue", "Laravel"],
-  backend: ["Express", "Laravel", "Gin"],
+  web: ["Vue.js", "React.js", "Next.js", "Laravel", "TailwindCSS", "Bootstrap"],
+  backend: ["Node.js", "Express.js", "Gin", "Laravel"],
   mobile: ["React Native", "Flutter"],
 };
 
-const databases = ["MySQL", "MongoDB", "PostgreSQL"];
+const databases = [
+  "PostgreSQL",
+  "MySQL",
+  "MongoDB",
+  "SQLite",
+  "Redis (sometimes when I feel fancy)",
+];
 
-const tools = ["Git", "Docker", "Kubernetes", "Amazon S3", "Amplify", "ngrok"];
+const tools = [
+  "Git (a.k.a life saver)",
+  "Docker (aka 'It works on my machine!')",
+  "AWS (S3, Amplify, EC2, RDS... the whole buffet)",
+  "Firebase",
+  "CI/CD Pipelines",
+  "Nginx",
+  "ngrok",
+  "Linux servers (aka my second home)",
+];
 
-/** Additional Skills */
+/** Bonus Powers */
 const additionalSkills = {
-  programmingLanguages: ["Python", "Java", "C++"],
-  extraDatabases: ["Redis", "SQLite"],
-  cloudServices: ["Amazon S3", "Amplify"],
-  otherTools: ["Linux", "Nginx", "Apache", "ngrok"],
+  softSkills: [
+    "Team leading",
+    "Conflict resolver",
+    "Professional deadline beater",
+  ],
+  cloudMagic: ["AWS", "Firebase", "VPS", "Amplify", "EC2", "S3"],
+  other: ["Hackathon enjoyer", "Bug whisperer", "StackOverflow archeologist"],
 };
 ```
